--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <img class="main-image" class="img-responsive" src="images/guanajato.jpg" alt="#">
+          <img class="main-image" class="img-responsive" src="images/guanajato.jpg" alt="the Guanajuato, Mexico skyline">
         </div>
       </div>
      <div class="row">
