fix bahamas link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="col-md-4" data-toggle="modal" data-target="#modalThree">
           <img class="img-responsive" src="images/beach.jpg" alt="picture of Nasau beach">
           <h3 class="text-uppercase">Bahamas</h3>
-          <p><a href="http://www.lonelyplanet.com/bahamas" target="_blank">http://www.lonelyplanet.com/bahamas</a></p>
+          <p><a href="http://www.lonelyplanet.com/the-bahamas" target="_blank">http://www.lonelyplanet.com/the-bahamas</a></p>
         </div>
         <!-- Modal THREE -->
           <div class="modal fade" id="modalThree" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
